# quantmind-v2

./: .gitattributes  .gitignore  AUDIT_RESULTS.md  BACKEND_FULL_AUDIT.md  BACKEND_FUNCTIONALITY_AUDIT.md  CLAUDE.md  COMPREHENSIVE_AUDIT_REPORT.md  DATA_QUALITY_AUDIT.md  FACTOR_TEST_REGISTRY.md  FRONTEND_INVENTORY.md  G1_PREPARATION_REPORT.md  IRONLAWS.md  LESSONS_LEARNED.md  MDD_SUPPLEMENT_OUTPUT.txt  P0_ATR_OUTPUT.txt  P0_FACTORS_OUTPUT.txt  P0_GAP_OUTPUT.txt  P0_IVOL_OUTPUT.txt  PHASE_1_PLAN.md  PMS_A_BASELINE.txt  PMS_G1_TIERED.txt  PMS_G2_CLOSE.txt  PROGRESS.md  PROJECT_ANATOMY.md  PROJECT_DIAGNOSTIC_REPORT.md  RESEARCH_LOG.md  RISK_LOG.md  STATUS_REPORT.md  STRATEGY_CANDIDATES.md  SYSTEM_RUNBOOK.md  SYSTEM_STATUS.md  TEAM_CHARTER.md  TEAM_CHARTER_V2.md  TEAM_CHARTER_V3.3.md  TEAM_CHARTER_V3.md  compass_artifact_wf-76eb548a-dc34-44f4-8aee-936652293b8c_text_markdown.md  pyproject.toml
.claude/: AGENT_SPAWN_TEMPLATE.md  AGENT_TEAMS_PLAYBOOK.md  CLAUDE.md  launch.json  settings.json  settings.local.json
.claude/agents/: _charter_context.md  alpha-miner.md  arch.md  data-engineer.md  factor-researcher.md  frontend-dev.md  ml-engineer.md  qa-tester.md  quant-reviewer.md  quantmind-cite-source-verifier.md  quantmind-prompt-iteration-evaluator.md  quantmind-redline-guardian.md  quantmind-risk-domain-expert.md  quantmind-v3-sprint-closure-gate-evaluator.md  quantmind-v3-sprint-orchestrator.md  quantmind-v3-tier-a-mvp-gate-evaluator.md  risk-guardian.md  strategy-designer.md
.claude/commands/: check-ic.md
.claude/hooks/: audit_log.py  block_dangerous_git.py  cite_drift_stop_pretool.py  doc_drift_check.py  handoff_sessionend.py  iron_law_enforce.py  post-task.md  post_edit_lint.py  pre-commit.md  pre-task.md  pre_commit_validate.py  pre_spawn_check.py  protect_critical_files.py  redline_pretool_block.py  research.md  sediment_poststop.py  session_context_inject.py  verify_completion.py
.claude/rules/: quantmind-overrides.md
.serena/: project.yml
backend/: .env.example
backend/alembic/: alembic.ini  env.py
backend/app/: config.py  db.py  exceptions.py  logging_config.py  main.py
backend/data/: factor_cache.py  parquet_cache.py
backend/engines/: alpha158_factors.py  attribution.py  backtest_engine.py  base_broker.py  base_strategy.py  beta_hedge.py  broker_qmt.py  config_guard.py  datafeed.py  dsr.py  event_backtest_engine.py  factor_analyzer.py  factor_classifier.py  factor_decay.py  factor_engine.py  factor_gate.py  factor_lifecycle.py  factor_profile.py  factor_profiler.py  factor_timing.py  fast_neutralize.py  financial_factors.py  ic_calculator.py  metrics.py  minute_feature_engine.py  ml_engine.py  ml_explainer.py  multi_freq_backtest.py  neutralizer.py  paper_broker.py  pbo.py  portfolio_aggregator.py  portfolio_network.py  pre_trade_validator.py  qlib_adapter.py  qmt_execution_adapter.py  regime_detector.py  signal_engine.py  size_neutral.py  slippage_model.py  (+5 more)
backend/migrations/: 2026_05_03_llm_call_log.sql  2026_05_03_llm_call_log_rollback.sql  2026_05_03_llm_cost_daily.sql  2026_05_03_llm_cost_daily_rollback.sql  2026_05_06_news_classified.sql  2026_05_06_news_classified_rollback.sql  2026_05_06_news_raw.sql  alert_dedup.sql  (+46 more)
cache/: README.md
config/: litellm_router.yaml  redis_backup_dump.rdb  servy-fastapi.json
configs/: alert_rules.yaml  backtest_12yr.yaml  backtest_12yr_sn050.yaml  backtest_5yr.yaml  pt_live.yaml  sw_industry_mapping.json
docs/: AGENT_SPAWN_TEMPLATE.md  ALPHA158_IMPORT_REPORT.md  ARCHITECTURE_AUDIT_2026Q1.md  AUDIT_DESIGN_VS_CODE_PART3.md  DATA_CATALOG.yaml  DATA_SYSTEM_V1.md  DECISION_LOG.md  DESIGN_DECISIONS.md  DEVELOPMENT_BLUEPRINT.md  DEV_AI_EVOLUTION.md  DEV_BACKEND.md  DEV_BACKTEST_ENGINE.md  DEV_FACTOR_MINING.md  DEV_FOREX.md  DEV_FRONTEND_UI.md  DEV_NOTIFICATIONS.md  DEV_PARAM_CONFIG.md  DEV_SCHEDULER.md  FACTOR_COUNT_GLOSSARY.md  FACTOR_ONBOARDING_SYSTEM.md  FACTOR_PROFILE_REPORT.md  GP_CLOSED_LOOP_DESIGN.md  IMPLEMENTATION_MASTER.md  LLM_IMPORT_POLICY.md  ML_WALKFORWARD_DESIGN.md  NORTHBOUND_MARKET_FACTORS_REPORT.md  NORTHBOUND_RANKING_FACTORS_REPORT.md  PROJECT_EXECUTION_ROADMAP_V2.md  PROJECT_HEALTH_REVIEW.md  PROJECT_RESTRUCTURE_PLAN.md  QUANTMIND_FACTOR_UPGRADE_PLAN_V3.md  QUANTMIND_FACTOR_UPGRADE_PLAN_V4.md  QUANTMIND_FACTOR_UPGRADE_PLAN_V5.md  QUANTMIND_HERMES_DEPLOYMENT.md  QUANTMIND_PLATFORM_BLUEPRINT.md  QUANTMIND_RISK_FRAMEWORK_V3_DESIGN.md  QUANTMIND_V2_DDL_FINAL.sql  QUANTMIND_V2_DESIGN_V5.md  QUANTMIND_V2_FIX_UPGRADE_ROADMAP_V3.md  QUANTMIND_V2_SYSTEM_BLUEPRINT.md  (+20 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
models/: all_astock_codes.txt  alpha158_ic_results.csv  alpha158_survived.csv  alpha158_vs_existing.csv  csi500_codes.txt  ensemble_clean_summary.csv  ensemble_summary.csv  forecast_cache.csv  g1_walkforward_summary.json  smoothing_daily_returns.csv
reports/: DATA_SYSTEM_V1_COMPLETION.md  p0_minute_g_robust_20260417_042557.json  p0_minute_neutral_ic_20260417_042139.json  p0_neutralize_minute_20260417_041621.json  p2_migration_plan.md  p2_sql_audit.md
scripts/: _check_pg.py  _progress_check.py  _verify_account_oneshot.py  analyze_bp_ratio_yearly_ic.py  analyze_candidate4_directions.py  analyze_factor_profiles.py  analyze_financial_factors.py  analyze_gpa_ic.py  analyze_moneyflow_factors.py  analyze_pead_factors.py  approve_l4.py  backtest_7factor_comparison.py  backtest_candidate5.py  backtest_hmm_regime.py  backtest_rsrs_weekly.py  backtest_turnover_reduction.py  batch_gate.py  batch_gate_v2.py  bayesian_slippage_calibration.py  bootstrap_smoothing_pvalues.py  build_12yr_baseline.py  build_backtest_cache.py  build_industry_l1_mapping.py  build_stock_status.py  calc_factors.py  cancel_stale_orders.py  check_graduation.py  check_llm_imports.sh  compare_filter_impact.py  compare_simbroker_qmt.py  compare_vol_ivol_backtest.py  compute_accrual_anomaly_ic.py  compute_analyst_surprise_ic.py  compute_batch3_ic.py  compute_batch4_ic.py  compute_batch6_ic.py  compute_daily_ic.py  compute_dv_ttm_ic.py  compute_factor_phase21.py  compute_ic_rolling.py  (+168 more)
(+1556 files in other folders)
